--- a/arch/arm64/boot/dts/xilinx/zynqmp-enclustra-xu9.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-enclustra-xu9.dts
@@ -52,7 +52,7 @@
 	mdio {
 		compatible = "cdns,macb-mdio";
 		reg = <0x0 0xff0b0000 0x0 0x1000>;
-		clocks =  <&clk 45>, <&clk 45>, <&clk 49>;
+		clocks =  <&zynqmp_clk 45>, <&zynqmp_clk 45>, <&zynqmp_clk 49>;
 		clock-names = "pclk", "tx_clk", "hclk";
 		#address-cells = <1>;
 		#size-cells = <0>;
