--- a/arch/arm/boot/dts/zynq-enclustra-qspi-10_15_20.dtsi
+++ b/arch/arm/boot/dts/zynq-enclustra-qspi-10_15_20.dtsi
@@ -1,45 +1,28 @@
-/ {
-  aliases {
-    spi0 = &qspi;
-  };
-};
-
-&qspi {
-	status = "okay";
-	is-dual = <0>;
-	num-cs = <1>;
-	spi-rx-bus-width = <0x4>;
-	spi-tx-bus-width = <0x4>;
-
-	flash@0 {
-		reg = <0x0>;
-		compatible = "spansion,s25fl512s", "jedec,spi-nor";
-		spi-max-frequency = <50000000>;
-		#address-cells = <1>;
-		#size-cells = <1>;
-		partition@qspi-bootimage {
-			label = "qspi-bootimage";
-			reg = <0x00000000 0x00600000>;
-		};
-		partition@qspi-kernel {
-			label = "qspi-kernel";
-			reg = <0x00600000 0x00500000>;
-		};
-		partition@qspi-device-tree {
-			label = "qspi-device-tree";
-			reg = <0x00B00000 0x00080000>;
-		};
-		partition@qspi-bootargs {
-			label = "qspi-bootargs";
-			reg = <0x03F80000 0x00080000>;
-		};
-		partition@qspi-bootscript {
-			label = "qspi-bootscript";
-			reg = <0x00B80000 0x00080000>;
-		};
-		partition@qspi-rootfs {
-			label = "qspi-rootfs";
-			reg = <0x00C00000 0x03380000>;
-		};
+&flash0 {
+	#address-cells = <1>;
+	#size-cells = <1>;
+	partition@qspi-bootimage {
+		label = "qspi-bootimage";
+		reg = <0x00000000 0x00600000>;
+	};
+	partition@qspi-kernel {
+		label = "qspi-kernel";
+		reg = <0x00600000 0x00500000>;
+	};
+	partition@qspi-device-tree {
+		label = "qspi-device-tree";
+		reg = <0x00B00000 0x00080000>;
+	};
+	partition@qspi-bootargs {
+		label = "qspi-bootargs";
+		reg = <0x03F80000 0x00080000>;
+	};
+	partition@qspi-bootscript {
+		label = "qspi-bootscript";
+		reg = <0x00B80000 0x00080000>;
+	};
+	partition@qspi-rootfs {
+		label = "qspi-rootfs";
+		reg = <0x00C00000 0x03380000>;
 	};
 };
