--- a/arch/arm/boot/dts/zynq_enclustra_common.dtsi
+++ b/arch/arm/boot/dts/zynq_enclustra_common.dtsi
@@ -50,6 +50,21 @@
 	};
 };
 
+&qspi {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
+	is-dual = <0>;
+	num-cs = <1>;
+	spi-rx-bus-width = <0x4>;
+	spi-tx-bus-width = <0x4>;
+	flash0: flash@0 {
+		reg = <0x0>;
+		compatible = "spansion,s25fl512s", "jedec,spi-nor";
+		spi-max-frequency = <50000000>;
+	};
+};
+
 &uart0 {
 	u-boot,dm-pre-reloc;
 	status = "okay";
