--- a/arch/arm64/boot/dts/xilinx/zynqmp_enclustra_common.dtsi
+++ b/arch/arm64/boot/dts/xilinx/zynqmp_enclustra_common.dtsi
@@ -49,16 +49,17 @@
 };
 
 &qspi {
+	status = "okay";
+	#address-cells = <1>;
+	#size-cells = <0>;
 	is-dual = <0>;
 	num-cs = <1>;
-	flash@0 {
-		#address-cells = <0x1>;
-		#size-cells = <0x1>;
-		compatible = "s25fl512s";
+	spi-rx-bus-width = <0x4>;
+	spi-tx-bus-width = <0x4>;
+	flash0: flash@0 {
 		reg = <0x0>;
-		spi-tx-bus-width = <0x1>;
-		spi-rx-bus-width = <0x4>;
-		spi-max-frequency = <0x2faf080>;
+		compatible = "spansion,s25fl512s", "jedec,spi-nor";
+		spi-max-frequency = <50000000>;
 	};
 };
 
