Moved address cells and size cells property to _common.dtsi

--- a/arch/arm/boot/dts/zynq_enclustra_common.dtsi
+++ b/arch/arm/boot/dts/zynq_enclustra_common.dtsi
@@ -62,6 +62,8 @@
 		spi-rx-bus-width = <0x4>;
 		spi-tx-bus-width = <0x4>;
 		spi-max-frequency = <50000000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
 	};
 };
 
